--- a/measure-data/src/main/resources/application.yml
+++ b/measure-data/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     #驱动
     driver-class-name: com.mysql.cj.jdbc.Driver
     #配置连接信息
-    url: jdbc:mysql://localhost:3306/Spring?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=UTF-8&useSSL=false
+    url: jdbc:mysql://localhost:3306/measure?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=UTF-8&useSSL=false
     #用户名
     username: root
     #密码
